<?xml version="1.0"?>
<package format="2">
  <name>merged_package</name>
  <version>0.0.1</version>
  <description>
    A merged package combining Carla and Cone functionalities.
  </description>

  <maintainer email="eric@example.com">Eric</maintainer>
  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>fsd_common_msgs</build_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-dev</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>fsd_common_msgs</build_export_depend>
  <build_export_depend>Eigen</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>libpcl-dev</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>fsd_common_msgs</exec_depend>
  <exec_depend>Eigen</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>